crates/ddlog-syntax/tests/inline/pass/function_ret_ty.rast
ROOT@0..36
  COMMENT@0..12 "// kind:item"
  WHITESPACE@12..13 "\n"
  ITEM@13..36
    FUNC_DEF@13..36
      MODIFIERS@13..13
      FUNCTION@13..21 "function"
      WHITESPACE@21..22 " "
      FUNC_NAME@22..25
        IDENT@22..25 "foo"
      FUNC_ARGS@25..27
        L_PAREN@25..26 "("
        R_PAREN@26..27 ")"
      COLON@27..28 ":"
      WHITESPACE@28..29 " "
      IDENT@29..32 "Bar"
      WHITESPACE@32..33 " "
      BLOCK@33..35
        L_CURLY@33..34 "{"
        R_CURLY@34..35 "}"
      WHITESPACE@35..36 "\n"
